<resources>
    <string name="app_name">MKZ - Sokoban</string>
    <string name="action_settings">Settings</string>
    <string name="menu_label">SOKOBAN</string>
    <string name="menu_select_map">Select Map</string>
    <string name="menu_score">Score</string>
    <string name="menu_help">Help</string>
    <string name="menu_exit">Exit</string>

    <string name="title_activity_select_map">Map selection</string>

    <string name="title_activity_help">Guide</string>
    <string name="help_label">Description of the game:</string>
    <string name="help_text">Some helpful text that nobody will read...</string>

    <string name="title_activity_game">Game</string>
    <string name="game_up">UP</string>
    <string name="game_left">LEFT</string>
    <string name="game_down">DOWN</string>
    <string name="game_right">RIGHT</string>

    <string name="title_activity_save_score">Score input</string>
    <string name="save_score_title">Enter your name for this score:</string>
    <string name="save_score_field">Name</string>
    <string name="save_score_ok">OK</string>
    <string name="save_score_cancel">CANCEL</string>

    <string name="title_activity_show_score">Score table</string>
    <string name="show_score_label">User scores:</string>
</resources>
