<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cz.zcu.vlada47.mkz_project.MainMenu"
    tools:showIn="@layout/activity_main_menu"
    android:background="@drawable/menu_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/menu_label"
            android:id="@+id/menuLabel"
            android:layout_gravity="center_horizontal"
            android:clickable="false"
            android:textStyle="bold|italic"
            android:textSize="@dimen/abc_text_size_display_2_material"
            android:textColor="#b49898" />

        <Button
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="wrap_content"
            android:text="@string/menu_select_map"
            android:id="@+id/menuSelectMap"
            android:layout_gravity="center_horizontal"
            android:onClick="selectMap" />

        <Button
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="wrap_content"
            android:text="@string/menu_score"
            android:id="@+id/menuScore"
            android:layout_gravity="center_horizontal"
            android:onClick="score" />

        <Button
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="wrap_content"
            android:text="@string/menu_help"
            android:id="@+id/menuHelp"
            android:layout_gravity="center_horizontal"
            android:onClick="help" />

        <Button
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="wrap_content"
            android:text="@string/menu_exit"
            android:id="@+id/menuExit"
            android:layout_gravity="center_horizontal"
            android:onClick="exit" />
    </LinearLayout>

</RelativeLayout>
