<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cz.zcu.vlada47.mkz_project.GameActivity"
    tools:showIn="@layout/activity_game"
    android:background="@drawable/menu_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/game_view_height"
            android:id="@+id/gameFrame"
            android:layout_gravity="center_horizontal"></FrameLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_up"
                android:id="@+id/upButton"
                android:layout_row="0"
                android:layout_column="1"
                android:onClick="goUp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_left"
                android:id="@+id/leftButton"
                android:layout_row="1"
                android:layout_column="0"
                android:onClick="goLeft" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_down"
                android:id="@+id/downButton"
                android:layout_row="1"
                android:layout_column="1"
                android:onClick="goDown" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_right"
                android:id="@+id/rightButton"
                android:layout_row="1"
                android:layout_column="2"
                android:onClick="goRight" />
        </GridLayout>

    </LinearLayout>
</RelativeLayout>
