<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cz.zcu.vlada47.mkz_project.SaveScoreActivity"
    tools:showIn="@layout/activity_save_score"
    android:background="@drawable/menu_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/save_score_title"
            android:id="@+id/saveScoreLabel"
            android:gravity="top|center_horizontal"
            android:background="@android:color/holo_blue_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/saveScoreTime"
            android:background="@android:color/holo_blue_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/saveScoreSteps"
            android:background="@android:color/holo_blue_light" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/save_score_field"
            android:ems="10"
            android:id="@+id/saveScoreName"
            android:background="@android:color/holo_blue_light" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_score_ok"
                android:id="@+id/saveScoreOk"
                android:onClick="confirm" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_score_cancel"
                android:id="@+id/saveScoreCancel"
                android:onClick="cancel" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
